--- a/CheaplayMVC/Views/User/Register.cshtml
+++ b/CheaplayMVC/Views/User/Register.cshtml
@@ -29,11 +29,11 @@
                 <span asp-validation-for="ConfirmPassword" />
             </div>
             <div class="form-group">
-                <input type="text" asp-for="Email" placeholder="Email"/>
+                <input type="email" asp-for="Email" placeholder="Email"/>
                 <span asp-validation-for="Email" />
             </div>
             <div class="form-group">
-                <input type="text" asp-for="Birthday" placeholder=@DateTime.Now.ToString("yyyy-MM-dd") />
+                <input  type="datetime" asp-for="Birthday" placeholder=@DateTime.Now.ToString("yyyy-MM-dd") />
                 <span asp-validation-for="Birthday" />
             </div>            
             <div class="form-group">
