--- a/CheaplayMVC/Views/Home/Index.cshtml
+++ b/CheaplayMVC/Views/Home/Index.cshtml
@@ -6,23 +6,42 @@
 }
 
 <div class="text-center">
-    <h1 class="display-1" style="font-size: 4em;">Welcome to Cheaplay</h1>
-    <h4 class="disabled">Lucky games for you</h4>
-    <div class="card-deck" style="margin-top: 55px;">
-        @{
+    <form>
+        <h1 class="display-1" style="font-size: 4em;">Welcome to Cheaplay</h1>
+        <h4 class="disabled">Lucky games for you</h4>
+        <div class="card-deck" style="margin-top: 55px;">
+            @{
 
-            foreach (var game in Model)
-            {
-                <div class="card d-flex flex-column" style="width: 18rem; height: 20rem;">
-                    <img class="card-img-top" src=@game.Image alt=@game.Title.ToLower() width="120" height="90">
-                    <div class="card-body">
-                        <h6 class="card-title">@game.Title</h6>
-                        <p class="card-text">@game.Price</p>
-                        <a href="#"class="align-self-end btn btn-lg btn-block btn-primary">Add subscription</a>
-                    </div>
-                </div>
+                foreach (var game in Model)
+                {
+                    <div class="card d-flex flex-column" style="width: 18rem; height: 22rem;">
+                        <img class="card-img-top" src=@game.Image alt=@game.Title.ToLower() width="120" height="80">
+                        <div class="card-body">
+                            <h6 class="card-title">@game.Title</h6>
+                            @if (@game.Discount == 0)
+                            {
+                                <pre> </pre>
+                                <p class="card-text">@game.Price$</p>
+                            }
+                            else
+                            {
+                                <p class="card-text" style="font-size: smaller; text-decoration:line-through; color:red;">@game.Price$</p>
+                                <p class="card-text">
+                                    @Math.Round((Decimal.ToDouble(game.Price) *
+    (100 - game.Discount) / 100), 2).ToString()$
+                                </p>
 
- }
-              }
+                            }
+                            <p class="card-text">Subscribes:@game.NumberSubscribes</p>
+                            <button name="button" class="align-self-end btn btn-lg btn-block btn-primary"
+                                    value=@game.Id asp-controller="Home" asp-action="Check">
+                                Add subscription
+                            </button>
                         </div>
                     </div>
+
+                }
+            }
+        </div>
+    </form>
+</div>
