--- a/CheaplayMVC/Views/Shared/_Layout.cshtml
+++ b/CheaplayMVC/Views/Shared/_Layout.cshtml
@@ -31,12 +31,15 @@
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <a class="dropdown-item" asp-area="" asp-controller="Game" asp-action="Allgames">Allgames</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Game" asp-action="Search">Search</a>
-                                    <a class="dropdown-item" asp-area="" asp-controller="Game" asp-action="Allgames">Popular</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Game" asp-action="Popular">Popular</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Profile">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Subscription" asp-action="All">Subscriptions</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -45,7 +48,7 @@
                             if (Context.User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Admin panel</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="AddNewGame">Admin panel</a>
                                 </li>
                             }
 
@@ -66,16 +69,17 @@
                     </ul>
                 </div>
                 @{
-                    if (Context.User.IsInRole("User") || Context.User.IsInRole("Admin"))
-                    {
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Hello, @Context.User.Claims.First().Value</a>
-                        }
+                    if (Context.User.IsInRole("User") || Context.User.IsInRole("Admin")) 
+                            {
+                        <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Hello, @Context.User.Claims.First().Value</a>-->
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Hello, @Context.User.Identity.Name</a>
                     }
+                }
                 <!--
-                <form class="form-inline" method="post">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="ss">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>-->
+    <form class="form-inline" method="post">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="ss">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>-->
             </div>
         </nav>
     </header>
