--- a/CheaplayMVC/Views/User/Profile.cshtml
+++ b/CheaplayMVC/Views/User/Profile.cshtml
@@ -4,42 +4,56 @@
     ViewData["Title"] = "Profile";
 }
 
-<div class="text-center">
-    <h2>Profile</h2>
-    <a>If you want to update some information just input new value and click "Save changes"</a>
-    <form asp-action="Update" asp-controller="User" asp-anti-forgery="true" style="margin-top:2em;">
-        <div class="validation" asp-validation-summary="ModelOnly"></div>
-        <div class="form-group">
-            <a>First name: </a>
-            <a>@Model.FirstName</a>
-            <input type="text" asp-for="FirstName" value=""/>
-            <span asp-validation-for="FirstName" />
-        </div>
-        <div class="form-group">
-            <a>Second name: </a>
-            <a>@Model.SecondName</a>
-            <input type="text" asp-for="SecondName" value=""/>
-            <span asp-validation-for="SecondName" />
-        </div>
-        <div class="form-group">
-            <a>Password: </a>
-            <input type="password" asp-for="Password" value="" />
-            <span asp-validation-for="Password" />
-        </div>        
-        <div class="form-group">
-            <a>Email: </a>
-            <a>@Model.Email</a>
-            <input type="email" asp-for="Email" value=""/>
-            <span asp-validation-for="Email" />
-        </div>
-        <div class="form-group">
-            <a>Birthday: </a>
-            <a>@Model.Birthday.ToString("yyyy-MM-dd")</a>
-            <input type="datetime" asp-for="Birthday" value="" placeholder=@DateTime.Now.ToString("yyyy-MM-dd") />
-            <span asp-validation-for="Birthday" />
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Save changes" class="btn btn-outline-dark" />
-        </div>
-    </form>
+<div>
+    <div  class="text-center">
+        <h2>Profile</h2>
+        <a>If you want to update some information just input new value and click "Save changes"</a>
+    </div>
+    <div class="offset-4">
+        <form asp-action="Update" asp-controller="User" asp-anti-forgery="true" style="margin-top:2em;">
+            <div class="validation" asp-validation-summary="ModelOnly"></div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <a>First name: </a>
+                    <a>@Model.FirstName</a>
+                </div>
+                <input class="col-3" type="text" asp-for="FirstName" value="" />
+                <span asp-validation-for="FirstName" />
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <a>Second name: </a>
+                    <a>@Model.SecondName</a>
+                </div>
+                <input class="col-3" type="text" asp-for="SecondName" value="" />
+                <span asp-validation-for="SecondName" />
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <a>Password: </a>
+                </div>
+                <input class="col-3" type="password" asp-for="Password" value="" />
+                <span asp-validation-for="Password" />
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <a>Email: </a>
+                    <a>@Model.Email</a>
+                </div>
+                <input class="col-3" type="email" asp-for="Email" value="" />
+                <span asp-validation-for="Email" />
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <a>Birthday: </a>
+                    <a>@Model.Birthday.ToString("yyyy-MM-dd")</a>
+                </div>
+                <input class="col-3" type="datetime" asp-for="Birthday" value="" placeholder=@DateTime.Now.ToString("yyyy-MM-dd") />
+                <span asp-validation-for="Birthday" />
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save changes" class="btn btn-outline-dark" />
+            </div>
+        </form>
+    </div>
 </div>
