--- a/CheaplayMVC/wwwroot/css/site.css
+++ b/CheaplayMVC/wwwroot/css/site.css
@@ -69,3 +69,15 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.card {
+    margin: 0 auto; /* Added */
+    float: none; /* Added */
+    margin-bottom: 10px; /* Added */
+}
+
+.sale-sticker {
+    font-size: smaller;
+    color: white;
+    background-color: red;
+}
